# metafun

./: .gitignore  Metafun.hs  README.md  metafun.cabal  package.yaml  stack.yaml
Language/CxxMPL/: Syntax.hs  Unparser.hs
Language/Kiff/: CallGraph.hs  LineParser.hs  Parser.hs  Syntax.hs  Typing.hs
Language/Kiff/Typing/: Errors.hs  Infer.hs  Instantiate.hs  State.hs  Substitution.hs  Unify.hs
Metafun/: Compiler.hs
Metafun/Compiler/: State.hs
src/: Metafun.hs
src/Language/CxxMPL/: Syntax.hs
src/Language/Kiff/: Parser.hs  Syntax.hs  Typing.hs
src/Language/Kiff/Typing/: Infer.hs  Instantiate.hs  State.hs  Substitution.hs  Unify.hs
src/Metafun/: Compiler.hs
src/Metafun/Compiler/: State.hs
